--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -1,17 +1,42 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>">
-        {% block stylesheets %}
-        {% endblock %}
+  <head>
+    <meta charset="UTF-8" />
+    <title>{% block title %}Welcome!{% endblock %}</title>
+    {% block header %}
+    <div class="mb-2" style="display: flex; justify-content: space-between">
+      <span>
+        <a href="{{ path('app_login') }}">Se Connecter</a>
+        |
+        <a href="{{ path('app_register') }}">S'enregistrer</a></span
+      >
 
-        {% block javascripts %}
-            {% block importmap %}{{ importmap('app') }}{% endblock %}
-        {% endblock %}
-    </head>
-    <body>
-        {% block body %}{% endblock %}
-    </body>
+      <span
+        >{% if app.user %} You are logged in as {{ app.user.userIdentifier }},
+        <a href="{{ path('app_logout') }}">Logout</a>
+        {% endif %}</span
+      >
+    </div>
+    <center>
+      <h1>Bienvenue sur le site de la bibliothéque</h1>
+      <a href="{{ path('app_home') }}">Accueil</a> |
+      <a href="{{ path('app_book_index') }}">Liste des livres</a> |
+      <a href="{{ path('app_borrow_new') }}">Emprunter un livre</a> |
+      {% if is_granted('ROLE_ADMIN') %}
+      <a href="{{ path('app_admin_panel') }}">Administration</a>{% endif
+        %}
+    </center>
+    {% endblock %}
+    <link
+      rel="icon"
+      href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></svg>"
+    />
+    {% block stylesheets %}{% endblock %} {% block javascripts %} {% block
+    importmap %}{{
+      importmap("app")
+    }}{% endblock %} {% endblock %}
+  </head>
+  <body>
+    {% block body %} {% endblock %}
+  </body>
 </html>
